search icon and search input css added

--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -33,3 +33,22 @@
   align-items: center;
 }
 
+/* .searchIcon {
+ padding: 10px;
+} */
+
+.searchIcon {
+  font-size: 15px !important;
+  margin-left: 8px;
+ }
+ 
+ .searchInput {
+  border: none;
+  width: 80%;
+ }
+ 
+ .searchInput:focus{
+  outline: none;
+ }
+ 
+ 
