--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -51,4 +51,12 @@
   outline: none;
  }
  
+ .topbarRight {
+  flex: 4;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  color: white;
+ }
+ 
  
