--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -59,4 +59,15 @@
   color: white;
  }
  
+ .topbarLink {
+  margin-right: 10px;
+  font-size: 14px;
+  cursor: pointer;
+ }
+ 
+ .topbarIcon {
+  display: flex;
+  align-items: center;
+ }
+ 
  
