Changed topbar image to fit profile space and small adjustments to notifications icons

--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -87,10 +87,14 @@
   right: -5px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center; 
+  font-size: 12px;
  }
  
  .topbarImage {
   width: 30px;
   height: 30px;
+  border-radius: 50%;
+  object-fit: cover;
+  cursor: pointer;
  }
