--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -1,6 +1,10 @@
 .sidebar {
   flex: 3;
-  height: 100%;
+  height: calc(100vh);
+  /* position: relative; */
+}
+
+.sidebarWraper {
+  padding: 20px;
   background-color: yellowgreen;
-  position: absolute;
 }
