--- a/src/components/share/share.css
+++ b/src/components/share/share.css
@@ -10,10 +10,20 @@
   padding: 10px;
 }
 
+.shareTop {
+  display: flex;
+  align-items: center;
+}
+
 .shareProfileImg {
   width: 50px;
   height: 50px;
   border-radius: 50%;
   object-fit: cover;
   margin-right: 10px;
+}
+
+.shareInput {
+  border: none;
+  width: 80%;
 }
