--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -7,5 +7,20 @@
 
 .sidebarWrapper {
   padding: 20px;
-  background-color: yellowgreen;
+}
+
+.sidebarList {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.sidebarListItem {
+  display: flex;
+  align-items: center;
+  margin: 20px;
+}
+
+.sidebarIcon {
+  margin-right: 15px;
 }
