--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -5,3 +5,13 @@
   box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.68);
   margin: 30px 0;
 }
+
+.postWrapper {
+  padding: 10px;
+}
+
+.postTop {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
