--- a/src/components/rightbar/rightbar.css
+++ b/src/components/rightbar/rightbar.css
@@ -1,3 +1,13 @@
-.sidebar {
+.rightbar {
   flex: 3.5;
+}
+
+.rightbarWrapper {
+  padding: 20px 20px 0 0;
+}
+
+.birthdayImage {
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
 }
