Added profile pic sizing style

--- a/src/components/rightbar/rightbar.css
+++ b/src/components/rightbar/rightbar.css
@@ -46,3 +46,10 @@
   margin-right: 10px;
   position: relative;
 }
+
+.rightbarProfileImage {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+}
