Changed sidebar to be sticky

--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -1,8 +1,9 @@
 .sidebar {
   flex: 3;
   height: 100vh;
-  /* position: relative; */
+  position: sticky;
   overflow-y: scroll;
+  top: 50px;
 }
 /* issue with height .sidebar */
 
