Site now working

--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -1,6 +1,6 @@
 .sidebar {
   flex: 3;
-  height: 100vh;
+  height: calc(100vh);
   position: sticky;
   overflow-y: scroll;
   top: 50px;
@@ -57,19 +57,5 @@
   padding: 0;
   margin: 0;
   list-style: none;
-}
-
-.sidebarFriend {
-  display: flex;
-  align-items: center;
-  margin-bottom: 15px;
-}
-
-.sidebarFriendImg {
-  width: 32px;
-  height: 32px;
-  border-radius: 50%;
-  object-fit: cover;
-  margin-right: 10px;
 }
 
