--- a/src/pages/profile/profile.css
+++ b/src/pages/profile/profile.css
@@ -5,3 +5,25 @@
 .profileRight {
   flex: 9;
 }
+
+.profileCover {
+  height: 320px;
+  position: relative;
+}
+
+.profileCoverImage {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+}
+
+.profileUserImage {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.profileRightBottom {
+  display: flex;
+}
