Profile picture now in middle of screen

--- a/src/pages/profile/profile.css
+++ b/src/pages/profile/profile.css
@@ -22,6 +22,11 @@
   height: 150px;
   border-radius: 50%;
   object-fit: cover;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
+  top: 150px;
 }
 
 .profileRightBottom {
