--- a/src/pages/profile/profile.css
+++ b/src/pages/profile/profile.css
@@ -30,6 +30,22 @@
   border: 3px solid white;
 }
 
+.profileInfo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.profileInfoName {
+  font-size: 24px;
+}
+
+.profileInfoDescription {
+  font-weight: 300;
+  margin-bottom: 20px;
+}
+
 .profileRightBottom {
   display: flex;
 }
