--- a/src/components/rightbar/rightbar.css
+++ b/src/components/rightbar/rightbar.css
@@ -32,7 +32,6 @@
 
 .rightbarTitle {
    margin-bottom: 20px;
-   margin-left: 10px;
 }
 
 .rightbarFriendList {
@@ -46,6 +45,24 @@
   font-size: 24px;
   font-weight: 500;
   margin-bottom: 10px;
+}
+
+.rightbarInfo {
+  margin-bottom: 30px;
+}
+
+.rightbarInfoItem {
+  margin-bottom: 10px;
+}
+
+.rightbarInfoKey {
+  font-weight: 500;
+  margin-right: 15px;
+  color: #555;
+}
+
+.rightbarInfoValue {
+  font-weight: 300;
 }
 
 .rightbarFollowerImage {
