Added login page

--- a/src/components/rightbar/rightbar.css
+++ b/src/components/rightbar/rightbar.css
@@ -74,6 +74,8 @@
 .rightbarFollower {
   display: flex;
   flex-direction: column;
+  margin-bottom: 20px;
+  cursor: pointer;
 }
 
 .rightbarFollowerImage {
