--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -6,3 +6,21 @@
   align-items: center;
   justify-content: center;
 }
+
+.loginWrapper {
+  width: 70%;
+  height: 70%;
+  display: flex;
+}
+
+.loginLeft, .loginRight {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.loginLogo {
+  font-size: 50px;
+  font-weight: 800;
+}
