Create account button styled and centered

--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -61,4 +61,23 @@
   color: white;
   font-size: 20px;
   font-weight: 500;
+  cursor: pointer;
+}
+
+.loginForgot {
+  text-align: center;
+  color: #1775ee;
+}
+
+.loginRegisterButton {
+  width: 50%;
+  height: 50px;
+  align-self: center;
+  border-radius: 10px;
+  border: none;
+  background-color: #42b72a;
+  color: white;
+  font-size: 20px;
+  font-weight: 500;
+  cursor: pointer;
 }
