--- a/src/components/share/share.css
+++ b/src/components/share/share.css
@@ -74,3 +74,19 @@
   cursor: pointer;
   color: white;
 }
+
+.shareImageContainer {
+  padding: 0 20px 10px 20px;
+  position: relative;
+}
+
+.shareImage {
+  width: 100%;
+  object-fit: cover;
+}
+
+.shareCancelImage {
+  position: absolute;
+  top: 0;
+  right: 20px;
+}
