--- a/src/components/rightbar/rightbar.css
+++ b/src/components/rightbar/rightbar.css
@@ -24,15 +24,23 @@
   font-size: 15px;
 }
 
-.rightbarAd {
+.rightbarBreak {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+/* .rightbarAd {
   width: 100%;
   border-radius: 10px;
   margin: 30px 10px;
-}
+} */
 
 .rightbarTitle {
    margin-bottom: 20px;
    margin-left: 10px;
+   text-align: center;
 }
 
 .rightbarFriendList {
