--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -1,9 +1,11 @@
 .post {
-  width: 100%;
+  width: 98%;
   border-radius: 10px;
   -webkit-box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.68);
   box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.68);
   margin: 30px 0;
+  margin-left: 10px;
+
 }
 
 .postWrapper {
